# aws-hello-world

./: .gitignore  Cargo.toml  Makefile  README.md  azure-pipelines.yml
docker/toolchain/: Dockerfile
src/: main.rs
